ci: fix publish PACKAGE_VERSION

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -108,7 +108,7 @@ jobs:
             - name: "👁️‍🗨️ Get Package Version › Print"
               id: task_initialize_package_getversion_debug
               run: |
-                echo "VERSION: ${{ env.PACKAGE_VERSION }}"
+                echo "VERSION: ${{ steps.task_initialize_package_getversion.outputs.PACKAGE_VERSION }}"
 
     # ---------------------------------------------------------------------------------------
     #   Job > Release > Github
@@ -212,8 +212,8 @@ jobs:
             # ---------------------------------------------------------------------------------------
 
             - name: "🔖 Tag › Pre Create ${{ env.PACKAGE_VERSION }}"
-              uses: rickstaa/action-create-tag@v1
               id: task_release_tag_create
+              uses: rickstaa/action-create-tag@v1
               with:
                 tag: ${{ env.PACKAGE_VERSION }}
                 tag_exists_error: false
