--- a/.github/workflows/labels-create.yml
+++ b/.github/workflows/labels-create.yml
@@ -26,14 +26,14 @@ env:
   BOT_NAME_DEPENDABOT:  dependabot[bot]
   LABELS_JSON: |
     [
-      { "name": "AC ✦ Changes Made",           "color": "8F1784", "description": "Requested changes have been made and are pending a re-scan" },
-      { "name": "AC ✦ Changes Required",       "color": "8F1784", "description": "Requires changes to be made to the package before being accepted" },
-      { "name": "AC ✦ Failed",                 "color": "a61f2d", "description": "Autocheck failed to run through a complete cycle, requires investigation" },
-      { "name": "AC ✦ Needs Rebase",           "color": "8F1784", "description": "Due to the permissions on the requesting repo, this pull request must be rebased by the author" },
-      { "name": "AC ✦ Passed",                 "color": "146b4a", "description": "Ready to be reviewed" },
-      { "name": "AC ✦ Review Required",        "color": "8F1784", "description": "PR needs to be reviewed by another person, after the requested changes have been made" },
-      { "name": "AC ✦ Security Warning",       "color": "761620", "description": "Does not conform to developer policies, or includes potentially dangerous code" },
-      { "name": "AC ✦ Skipped Scan",           "color": "8F1784", "description": "Author has skipped code scan" },
+      { "name": "AC › Changes Made",           "color": "8F1784", "description": "Requested changes have been made and are pending a re-scan" },
+      { "name": "AC › Changes Required",       "color": "8F1784", "description": "Requires changes to be made to the package before being accepted" },
+      { "name": "AC › Failed",                 "color": "a61f2d", "description": "Autocheck failed to run through a complete cycle, requires investigation" },
+      { "name": "AC › Needs Rebase",           "color": "8F1784", "description": "Due to the permissions on the requesting repo, this pull request must be rebased by the author" },
+      { "name": "AC › Passed",                 "color": "146b4a", "description": "Ready to be reviewed" },
+      { "name": "AC › Review Required",        "color": "8F1784", "description": "PR needs to be reviewed by another person, after the requested changes have been made" },
+      { "name": "AC › Security Warning",       "color": "761620", "description": "Does not conform to developer policies, or includes potentially dangerous code" },
+      { "name": "AC › Skipped Scan",           "color": "8F1784", "description": "Author has skipped code scan" },
       { "name": "Status 𐄂 Duplicate",          "color": "75536b", "description": "Issue or pull request already exists" },
       { "name": "Status 𐄂 Accepted",            "color": "2e7539", "description": "This pull request has been accepted" },
       { "name": "Status 𐄂 Autoclosed",          "color": "3E0915", "description": "Originally stale and was autoclosed for no activity" },
@@ -53,7 +53,37 @@ env:
       { "name": "Type ◦ Git Action",            "color": "030406", "description": "GitHub Action / workflow" },
       { "name": "Type ◦ Pull Request",          "color": "8F1784", "description": "Normal pull request" },
       { "name": "Type ◦ Roadmap",               "color": "8F1784", "description": "Feature or bug currently planned for implementation" },
-      { "name": "⚠ Urgent",                    "color": "a8740e", "description": "Requires urgent attention" }
+      { "name": "Type ◦ Internal",              "color": "A51994", "description": "Assigned items are for internal developer use." },
+      { "name": "Build ◦ Desktop",              "color": "c7ca4a", "description": "Specific to desktop" },
+      { "name": "Build ◦ Linux",                "color": "c7ca4a", "description": "Specific to Linux" },
+      { "name": "Build ◦ MacOS",                "color": "c7ca4a", "description": "Specific to MacOS" },
+      { "name": "Build ◦ Mobile",               "color": "c7ca4a", "description": "Specific to mobile" },
+      { "name": "Build ◦ Web",                  "color": "c7ca4a", "description": "Specific to web" },
+      { "name": "Build ◦ Windows",              "color": "c7ca4a", "description": "Specific to Windows" },
+      { "name": "› API",                        "color": "F99B50", "description": "Plugin API, CLI, browser JS API" },
+      { "name": "› Auto-type",                  "color": "9141E0", "description": "Auto-type functionality in desktop apps" },
+      { "name": "› Browser",                    "color": "9141E0", "description": "Browser plugins and passing data to <=> from KeeWeb" },
+      { "name": "› Customization",              "color": "E3F0FC", "description": "Customizing KeeWeb: plugins, themes, configs" },
+      { "name": "› Design",                     "color": "FA70DE", "description": "Design related queries" },
+      { "name": "› Dist",                       "color": "FA70DE", "description": "Installers and other forms of software distribution" },
+      { "name": "› Enterprise",                 "color": "11447a", "description": "Issues about collaboration, administration, and so on" },
+      { "name": "› Hardware",                   "color": "5a7503", "description": "YubiKey, other tokens, biometrics" },
+      { "name": "› Import/Export",              "color": "F5FFCC", "description": "Import from and export to different file formats" },
+      { "name": "› kdbxweb",                    "color": "eb6420", "description": "Core library: https://github.com/keeweb/kdbxweb" },
+      { "name": "› Performance",                "color": "006b75", "description": "Web and desktop performance issues" },
+      { "name": "› Plugin Request",             "color": "FCE9CA", "description": "Requested changes should be implemented as a plugin" },
+      { "name": "› Security",                   "color": "F75D39", "description": "Security issues" },
+      { "name": "› Self-Hosting",               "color": "fad8c7", "description": "Self-hosting installations and configs" },
+      { "name": "› Storage",                    "color": "5319e7", "description": "Storage providers: Dropbox, Google, WebDAV, etc." },
+      { "name": "› Updater",                    "color": "1BADDE", "description": "Auto-updater issues" },
+      { "name": "› UX",                         "color": "1BADDE", "description": "UX and usability" },
+      { "name": "› Website",                    "color": "fef2c0", "description": "Website https://keeweb.info" },
+      { "name": "⚠ Urgent",                     "color": "a8740e", "description": "Requires urgent attention" },
+      { "name": "⚠ Announcement",               "color": "DB4712", "description": "KeeWeb announcements" },
+      { "name": "📰 Progress Report",           "color": "392297", "description": "Updates on the development of KeeWeb" },
+      { "name": "📦 Release",                   "color": "277542", "description": "Release announcements" },
+      { "name": "✔️ Poll",                      "color": "972255", "description": "Community polls" }
+      { "name": "❔ Question",                  "color": "FFFFFF", "description": "All questions" }
     ]
 
 jobs:
