--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,3 @@
-# https://prettier.io/docs/en/options.html
-
 # --------------------------------------------------------------------------------------
 #   Try prettier's new ternary formatting before it becomes the
 #   default behavior.
@@ -11,7 +9,8 @@
 #   changes.
 #
 #   @default    : false
-#   @ref        : https://prettier.io/docs/en/options.html#experimental-ternaries
+#   @ref        : https://prettier.io/docs/en/options.html
+#                 https://prettier.io/docs/en/options.html#experimental-ternaries
 #                 https://github.com/prettier/prettier/pull/13183
 # --------------------------------------------------------------------------------------
 # experimentalTernaries: false
@@ -50,7 +49,7 @@ useTabs: false
 #   @default        : true
 #   @ref            : https://prettier.io/docs/en/options.html#semicolons
 # --------------------------------------------------------------------------------------
-semi: true
+semi: false
 
 # --------------------------------------------------------------------------------------
 #   Use single quotes instead of double quotes.
