chore: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,86 @@
-coverage
-dist
-.opt-*
-node_modules
+# ----------------------------------------
+# Ignore everything
+# ----------------------------------------
+/*
 
-# Package Locks
-yarn.lock
+# ----------------------------------------
+# [WL]: Git Base Folders/Files
+# ----------------------------------------
+!/.github
+!/.gitea
+!*README.md
+!*CHANGELOG.md
+!*CONTRIBUTE.md
+!*CONTRIBUTING.md
 
-# Private
-.dev
-.env
+# ----------------------------------------
+# [WL]: Electron
+# ----------------------------------------
+!/electron
+
+
+# ----------------------------------------
+# [WL]: Test Folder
+# ----------------------------------------
+!/Tests
+
+# ----------------------------------------
+# [WL]: Manifest Folders
+# ----------------------------------------
+!/Manifest
+
+# ----------------------------------------
+# [WL]: Tools Folders
+# ----------------------------------------
+!/Tools
+
+# ----------------------------------------
+# [WL]: Dist
+# ----------------------------------------
+!/dist
+
+# ----------------------------------------
+# [WL]: assets
+# ----------------------------------------
+!/assets
+
+# ----------------------------------------
+# [WL]: Gitignore File
+# ----------------------------------------
+!.gitignore
+
+# ----------------------------------------
+# [WL]: Docs Folder
+# ----------------------------------------
+!/docs
+
+# ----------------------------------------
+# [WL]: Source Folder
+# ----------------------------------------
+!/src
+
+# ----------------------------------------
+# [WL]: Dist Folder
+# ----------------------------------------
+!/dist
+
+# ----------------------------------------
+# [WL]: Base Files
+# ----------------------------------------
+!*.all-contributorsrc
+!*.editorconfig
+!*gistr.js
+!*manifest.json
+!*package.json
+!*package-lock.json
+!*rollup.config.js
+!*rollup.config.mjs
+!*tsconfig.json
+!*versions.json
+!sign.bat
+!*SHA*.asc
+!*SHA*.sig
+!*styles.css
+!*eslint.config.js
+!*.prettierignore
+!*.prettierrc
