--- a/.github/workflows/issues-scan.yml
+++ b/.github/workflows/issues-scan.yml
@@ -5,8 +5,8 @@
 #   @url        : https://github.com/Aetherinox
 # ---------------------------------------------------------------------------------------
 
-name: "⚡ PR › Autoscan"
-run-name: "⚡ PR › Autoscan"
+name: "🎫 Issues › Scan"
+run-name: "🎫 Issues › Scan"
 
 # ---------------------------------------------------------------------------------------
 #   triggers
