--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,6 +75,23 @@ on:
               default:      "1"
 
 # #
+#   environment variables
+# #
+
+env:
+    PLUGIN_NAME:            obsidian-snippets
+    CHANGELOG_MODE_COMMIT:  true
+    SHOW_UNCATEGORIZED:     false
+    PRERELEASE:             false
+    VERSION_RC:             '1'
+    FOLDER_DIST:            'dist'
+    ASSIGN_USER:            Aetherinox
+    BOT_NAME_1:             AdminServ
+    BOT_NAME_2:             AdminServX
+    BOT_NAME_3:             EuropaServ
+    BOT_NAME_DEPENDABOT:    dependabot[bot]
+
+# #
 #   jobs
 # #
 
@@ -144,7 +161,10 @@ jobs:
         runs-on: ubuntu-latest
         needs: [ job-initialize ]
         env:
-          PACKAGE_VERSION: ${{ needs.job-initialize.outputs.package_version }}
+            PACKAGE_VERSION: ${{ needs.job-initialize.outputs.package_version }}
+        outputs:
+            guid: ${{ steps.task_release_dotenv_get.outputs.GUID }}
+            uuid: ${{ steps.task_release_dotenv_get.outputs.UUID }}
         permissions:
             contents: write
             packages: write
@@ -185,7 +205,7 @@ jobs:
             - name: "🪪 Generate IDs"
               id: task_release_npm_env_generate
               run: |
-                  npm run obs:generate
+                  npm run root:generate
 
             # #
             #   .ENV > Get
@@ -479,6 +499,19 @@ jobs:
                   echo "RC Output ID ............... ${{ steps.task_release_bundle_rc.outputs.id }}"
                   echo "---- CHANGELOG ---------------------------------------------------------------"
 
+            # #
+            #   Upload artifacts > .deb packages
+            # #
+
+            - name: >-
+                📋 Upload Artifacts › ${{ inputs.PLUGIN_NAME }}-${{ env.PACKAGE_VERSION }}.zip
+              id: task_release_artifact_i386
+              uses: actions/upload-artifact@v4
+              if: always()
+              with:
+                name: "${{ inputs.PLUGIN_NAME }}-${{ env.PACKAGE_VERSION }}.zip"
+                path: src/${{ inputs.PLUGIN_NAME }}-${{ env.PACKAGE_VERSION }}.zip
+                retention-days: 30
 
     # #
     #   JOB > COMPLETE
@@ -490,6 +523,8 @@ jobs:
         needs: [job-initialize, job-release]
         env:
             PACKAGE_VERSION: ${{ needs.job-initialize.outputs.package_version }}
+            GUID: ${{ needs.job-release.outputs.guid }}
+            UUID: ${{ needs.job-release.outputs.uuid }}
         runs-on: ubuntu-latest
         steps:
 
@@ -517,23 +552,11 @@ jobs:
             - name: "🕛 Get Env Vars"
               id: task_complete_set_envs
               run: |
-                  deb_386_file="${{ inputs.PLUGIN_NAME || env.PLUGIN_NAME }}${{ env.PACKAGE_VERSION }}-linux-386.deb/${{ inputs.PLUGIN_NAME || env.PLUGIN_NAME }}${{ env.PACKAGE_VERSION }}-linux-386.deb"
-                  deb_386_sha256="$(shasum --algorithm 256 ${deb_386_file} | awk '{ print $1 }')"
+                release_stable_file="${{ inputs.PLUGIN_NAME }}-${{ env.PACKAGE_VERSION }}.zip"
+                release_stable_sha256="$(shasum --algorithm 256 ${release_stable_file} | awk '{ print $1 }')"
 
-                  echo "FILE_DEB_386=${deb_386_file}" >> $GITHUB_ENV
-                  echo "SHA_DEB_386=${deb_386_sha256}" >> $GITHUB_ENV
-
-                  deb_amd_file="${{ inputs.PLUGIN_NAME || env.PLUGIN_NAME }}${{ env.PACKAGE_VERSION }}-linux-amd64.deb/${{ inputs.PLUGIN_NAME || env.PLUGIN_NAME }}${{ env.PACKAGE_VERSION }}-linux-amd64.deb"
-                  deb_amd_sha256="$(shasum --algorithm 256 ${deb_amd_file} | awk '{ print $1 }')"
-
-                  echo "FILE_DEB_AMD=${deb_amd_file}" >> $GITHUB_ENV
-                  echo "SHA_DEB_AMD=${deb_amd_sha256}" >> $GITHUB_ENV
-
-                  deb_arm_file="${{ inputs.PLUGIN_NAME || env.PLUGIN_NAME }}${{ env.PACKAGE_VERSION }}-linux-arm64.deb/${{ inputs.PLUGIN_NAME || env.PLUGIN_NAME }}${{ env.PACKAGE_VERSION }}-linux-arm64.deb"
-                  deb_arm_sha256="$(shasum --algorithm 256 ${deb_arm_file} | awk '{ print $1 }')"
-
-                  echo "FILE_DEB_ARM=${deb_arm_file}" >> $GITHUB_ENV
-                  echo "SHA_DEB_ARM=${deb_arm_sha256}" >> $GITHUB_ENV
+                echo "FILE_STABLE=${release_stable_file}" >> $GITHUB_ENV
+                echo "SHA_STABLE=${release_stable_sha256}" >> $GITHUB_ENV
 
             # #
             #   Job > Complete > Summary of publish
@@ -546,7 +569,8 @@ jobs:
                   echo ""
                   echo "| File                            | Result                  |" >> $GITHUB_STEP_SUMMARY
                   echo "| ------------------------------- | ----------------------- |" >> $GITHUB_STEP_SUMMARY
-                  echo "| **${{ env.FILE_DEB_386 }}**       | ${{ env.SHA_DEB_386 }} |" >> $GITHUB_STEP_SUMMARY
-                  echo "| **${{ env.FILE_DEB_AMD }}**       | ${{ env.SHA_DEB_AMD }} |" >> $GITHUB_STEP_SUMMARY
-                  echo "| **${{ env.FILE_DEB_ARM }}**       | ${{ env.SHA_DEB_ARM }} |" >> $GITHUB_STEP_SUMMARY
+                  echo "| **${{ env.FILE_STABLE }}**      | ${{ env.SHA_STABLE }} |" >> $GITHUB_STEP_SUMMARY
+                  echo "| **GUID**                        | ${{ env.GUID }} |" >> $GITHUB_STEP_SUMMARY
+                  echo "| **UUID**                        | ${{ env.UUID }} |" >> $GITHUB_STEP_SUMMARY
+                  echo "| **File**                        | ${{ env.SHA_DEB_ARM }} |" >> $GITHUB_STEP_SUMMARY
 
