--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -235,7 +235,7 @@ jobs:
               id: task_release_build_st
               if: ${{ startsWith( inputs.PRERELEASE, false ) }}
               run: |
-                  echo Building STABLE Package .zip PACKAGE_VERSION
+                  echo Building STABLE Package .zip ${{ env.PACKAGE_VERSION }}
                   zip -r ${{ inputs.PLUGIN_NAME }}-${{ env.PACKAGE_VERSION }}.zip package.json README.md LICENSE Snippets
                   ls
               env:
@@ -245,7 +245,7 @@ jobs:
               id: task_release_build_rc
               if: ${{ startsWith( inputs.PRERELEASE, true ) }}
               run: |
-                  echo Building PRE-RELEASE Package .zip PACKAGE_VERSION
+                  echo Building PRE-RELEASE Package .zip ${{ env.PACKAGE_VERSION }}
                   zip -r ${{ inputs.PLUGIN_NAME }}-${{ env.PACKAGE_VERSION }}-rc.${{ inputs.VERSION_RC }}.zip package.json README.md LICENSE Snippets
                   ls
               env:
@@ -438,19 +438,19 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.ADMINSERV_TOKEN_CL }}
               with:
-                token: ${{ secrets.ADMINSERV_TOKEN_CL }}
-                name: v${{ env.PACKAGE_VERSION }}
-                tag_name: ${{ env.PACKAGE_VERSION }}
-                target_commitish: ${{ github.event.inputs.branch }}
-                draft: false
-                generate_release_notes: false
-                files: |
-                    ${{ inputs.PLUGIN_NAME }}-${{ env.PACKAGE_VERSION }}.zip
-                    SHA256SUMS.txt
-                prerelease: false
-                body: |
-                    ${{ steps.task_release_changelog_categorized.outputs.changelog }}
-                    ${{ steps.task_release_changelog_uncategorized.outputs.changelog }}
+                  token: ${{ secrets.ADMINSERV_TOKEN_CL }}
+                  name: v${{ env.PACKAGE_VERSION }}
+                  tag_name: ${{ env.PACKAGE_VERSION }}
+                  target_commitish: ${{ github.event.inputs.branch }}
+                  draft: false
+                  generate_release_notes: false
+                  files: |
+                      ${{ inputs.PLUGIN_NAME }}-${{ env.PACKAGE_VERSION }}.zip
+                      SHA256SUMS.txt
+                  prerelease: false
+                  body: |
+                      ${{ steps.task_release_changelog_categorized.outputs.changelog }}
+                      ${{ steps.task_release_changelog_uncategorized.outputs.changelog }}
 
             - name: "🏳️ Post › RC"
               if: ${{ startsWith( inputs.PRERELEASE, true ) }}
@@ -459,28 +459,29 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.ADMINSERV_TOKEN }}
               with:
-                token: ${{ secrets.ADMINSERV_TOKEN }}
-                name: v${{ env.PACKAGE_VERSION }}
-                tag_name: ${{ env.PACKAGE_VERSION }}
-                target_commitish: ${{ github.event.inputs.branch }}
-                draft: false
-                generate_release_notes: false
-                files: |
-                    ${{ inputs.PLUGIN_NAME }}-${{ env.PACKAGE_VERSION }}-rc.${{ inputs.VERSION_RC }}.zip
-                    SHA256SUMS.txt
-                prerelease: false
-                body: |
-                    > [!WARNING]
-                    > This is a **release candidate**, which means it is not a stable release and could contain bugs. You should download it at your own risk.
+                  token: ${{ secrets.ADMINSERV_TOKEN }}
+                  name: v${{ env.PACKAGE_VERSION }}
+                  tag_name: ${{ env.PACKAGE_VERSION }}
+                  target_commitish: ${{ github.event.inputs.branch }}
+                  draft: false
+                  generate_release_notes: false
+                  files: |
+                      ${{ inputs.PLUGIN_NAME }}-${{ env.PACKAGE_VERSION }}-rc.${{ inputs.VERSION_RC }}.zip
+                      SHA256SUMS.txt
+                  prerelease: false
+                  body: |
+                      > [!WARNING]
+                      > This is a **release candidate**, which means it is not a stable release and could contain bugs. You should download it at your own risk.
 
-                    ${{ steps.task_release_changelog_categorized.outputs.changelog }}
-                    ${{ steps.task_release_changelog_uncategorized.outputs.changelog }}
+                      ${{ steps.task_release_changelog_categorized.outputs.changelog }}
+                      ${{ steps.task_release_changelog_uncategorized.outputs.changelog }}
 
             # #
             #   Print Status
             # #
 
             - name: "🎛️ Status › Print"
+              id: task_release_status_print
               run: |
                   echo "Printing Variables"
                   echo
@@ -509,9 +510,9 @@ jobs:
               uses: actions/upload-artifact@v4
               if: always()
               with:
-                name: "release"
-                path: ${{ inputs.PLUGIN_NAME }}-${{ env.PACKAGE_VERSION }}.zip
-                retention-days: 30
+                  name: "release"
+                  path: ${{ inputs.PLUGIN_NAME }}-${{ env.PACKAGE_VERSION }}.zip
+                  retention-days: 30
 
     # #
     #   JOB > COMPLETE
@@ -552,11 +553,11 @@ jobs:
             - name: "🕛 Get Env Vars"
               id: task_complete_set_envs
               run: |
-                release_stable_file="release/${{ inputs.PLUGIN_NAME }}-${{ env.PACKAGE_VERSION }}.zip"
-                release_stable_sha256="$(shasum --algorithm 256 ${release_stable_file} | awk '{ print $1 }')"
+                  release_stable_file="release/${{ inputs.PLUGIN_NAME }}-${{ env.PACKAGE_VERSION }}.zip"
+                  release_stable_sha256="$(shasum --algorithm 256 ${release_stable_file} | awk '{ print $1 }')"
 
-                echo "FILE_STABLE=${release_stable_file}" >> $GITHUB_ENV
-                echo "SHA_STABLE=${release_stable_sha256}" >> $GITHUB_ENV
+                  echo "FILE_STABLE=${release_stable_file}" >> $GITHUB_ENV
+                  echo "SHA_STABLE=${release_stable_sha256}" >> $GITHUB_ENV
 
             # #
             #   Job > Complete > Summary of publish
