--- a/.github/workflows/labels-clean..yml
+++ b/.github/workflows/labels-clean..yml
@@ -148,8 +148,8 @@ jobs:
 
                       // Fetch labels from the source repository
                       const response = await github.rest.issues.listLabelsForRepo({
-                          owner: sourceRepo.split('/')[0],
-                          repo: sourceRepo.split('/')[1],
+                          owner: targetRepo.split('/')[0],
+                          repo: targetRepo.split('/')[1],
                       });
                       console.log("Labels fetched: ", response.data);
 
