ci: update workflow

--- a/.github/workflows/issues-stale.yml
+++ b/.github/workflows/issues-stale.yml
@@ -617,8 +617,8 @@ jobs:
                     <sub>I am a bot reaching out to you with an automated response.</sub>
                 stale-issue-label: 'Status 𐄂 Stale'
                 close-issue-label: 'Status 𐄂 Autoclosed'
-                exempt-issue-labels: 'feature,Type ◦ Feature,bug,Type ◦ Bug'
-                days-before-stale: 30
+                exempt-issue-labels: 'Status 𐄂 Pending,Type ◦ Bug,Type ◦ Roadmap'
+                days-before-stale: 14
                 days-before-close: 7
                 days-before-pr-stale: -1
                 days-before-pr-close: -1
